--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,15 @@
     {% include head-custom.html %}
   </head>
   <body>
-        <body>
-      <nav>
-        <ul>
-          {% for item in site.data.navigation %}
-            <li><a href="{{ item.url | relative_url }}">{{ item.title }}</a></li>
-          {% endfor %}
-        </ul>
-      </nav>
+    <nav class="site-nav" role="navigation">
+      <ul>
+        <li><a href="{{ '/' | relative_url }}">Home</a></li>
+        <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
+        {% for item in site.data.navigation %}
+          <li><a href="{{ item.url | relative_url }}">{{ item.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </nav>      
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
