--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,9 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
+        <!-- filepath: /Users/kamil/Documents/GitHub/dylewiczk.github.io/_layouts/default.html -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jekyll-theme-cayman/0.1.0/cayman.min.css">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
