--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*
 .site-nav {
   background: #157878;
   padding: 0.5em 1em;
@@ -30,3 +31,4 @@
 .site-nav a:hover {
   background: #11606a;
 }
+  */
