--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% include head-custom.html %}
   </head>
   <body>
-      <nav>
+    <nav class="site-nav">
         <ul>
           {% for item in site.data.navigation %}
             <li><a href="{{ item.url | relative_url }}">{{ item.title }}</a></li>
